Change about link

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>Hello World</h1>
-    <a href="/about">Contact</a>
+    <a href="/victorfrommd/about">Contact</a>
   </body>
 </html>
