--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Personal Blog</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Victor's Blog</h1>
     <a href="/victorfrommd/about">Contact</a>
   </body>
 </html>
