--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>About</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <h1>About page</h1>
