--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Personal Blog</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <h1>Victor's Blog</h1>
