--- a/about.html
+++ b/about.html
@@ -4,8 +4,10 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>About page</h1>
-    <p>Hi! My name is Victor</p>
-    <a href="/victorfrommd">Back!</a>
+    <div class="content">
+      <h1>About page</h1>
+      <p>Hi! My name is Victor</p>
+      <a href="/victorfrommd">Back!</a>
+    </div>
   </body>
 </html>
