--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>Victor's Blog</h1>
-    <a href="/victorfrommd/about">Contact</a>
+    <div class="content">
+      <h1>Victor's Blog</h1>
+      <a href="/victorfrommd/about">Contact</a>
+    </div>
   </body>
 </html>
