--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="content">
-      <h1>About page</h1>
+      <h1>This is me!</h1>
       <p>Hi! My name is Victor</p>
       <a href="/victorfrommd">Back!</a>
     </div>
