--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <body>
     <div class="content">
       <h1>Victor's Blog</h1>
+      <p>
+        A page for my thoughts. If you learned something new, I'm very glad to
+        hear that. You can show your appreciation by planting one more tree on
+        my website.
+      </p>
+      <button type="submit">Plant Tree</button>
       <a href="/victorfrommd/about">Contact</a>
     </div>
   </body>
