Added basic blog list with one post link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         my website.
       </p>
       <button type="submit">Plant Tree</button>
-      <a href="/victorfrommd/about">Contact</a>
+      <a href="/victorfrommd/about">About</a>
+      <a href="/victorfrommd/blog">Blog</a>
     </div>
   </body>
 </html>
