--- a/about.html
+++ b/about.html
@@ -7,6 +7,11 @@
     <div class="content">
       <h1>This is me!</h1>
       <p>Hi! My name is Victor</p>
+      <p>
+        I work as Software Engineer. I'm interested in Civil Engineering,
+        Religions, Music, Sports and many other topics. Follow me on this
+        non-sence journey of thoughts.
+      </p>
       <a href="/victorfrommd">Back!</a>
     </div>
   </body>
