--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
   </head>
   <body>
     <div class="content">
-      <h1>Victor's Blog</h1>
+      <div class="header">
+        <h1>Victor's Blog</h1>
+      </div>
+      <div id="nav">
+        <a href="/victorfrommd/blog">Blog</a>
+        <a href="/victorfrommd/about">About</a>
+      </div>
       <p>
         A page for my thoughts. If you learned something new, I'm very glad to
         hear that. You can show your appreciation by planting one more tree on
         my website.
       </p>
       <button type="submit">Plant Tree</button>
-      <a href="/victorfrommd/about">About</a>
-      <a href="/victorfrommd/blog">Blog</a>
     </div>
   </body>
 </html>
