Small updates. Added responsive design on the index page

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Blog</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div class="content">
-      <div class="header">
-        <h1>Victor's Blog</h1>
-      </div>
+    <div class="header">
       <div id="nav">
         <a href="/victorfrommd/blog">Blog</a>
         <a href="/victorfrommd/about">About</a>
       </div>
-      <p>
+      <h1>Victor's Blog</h1>
+    </div>
+    <div class="content">
+      <div>
         A page for my thoughts. If you learned something new, I'm very glad to
         hear that. You can show your appreciation by planting one more tree on
         my website.
-      </p>
-      <button type="submit">Plant Tree</button>
+      </div>
     </div>
   </body>
 </html>
