Added responsive design for other pages. Used same structure for all the pages.

--- a/about.html
+++ b/about.html
@@ -1,18 +1,24 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
+    <div class="header">
+      <div id="nav">
+        <a href="/victorfrommd">Home</a>
+        <a href="/victorfrommd/blog">Blog</a>
+        <a href="/victorfrommd/about">About</a>
+      </div>
+      <h1>About</h1>
+    </div>
     <div class="content">
-      <h1>This is me!</h1>
-      <p>Hi! My name is Victor</p>
-      <p>
-        I work as Software Engineer. I'm interested in Civil Engineering,
+      <div>
+        Hi! My name is Victor. I work as Software Engineer at Doctolib. I'm interested in Civil Engineering,
         Religions, Music, Sports and many other topics. Follow me on this
         non-sence journey of thoughts.
-      </p>
-      <a href="/victorfrommd">Back!</a>
+      </div>
     </div>
   </body>
 </html>
