--- a/blog.html
+++ b/blog.html
@@ -1,15 +1,22 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
+    <div class="header">
+      <div id="nav">
+        <a href="/victorfrommd">Home</a>
+        <a href="/victorfrommd/blog">Blog</a>
+        <a href="/victorfrommd/about">About</a>
+      </div>
+      <h1>Articles</h1>
+    </div>
     <div class="content">
-      <h1>Welcome to my palace of thoughts!</h1>
       <ul>
         <li><a href="/victorfrommd/posts/climate-change">Climate Change</a></li>
       </ul>
-      <a href="/victorfrommd">Back!</a>
     </div>
   </body>
 </html>
