--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <div class="header">
       <div id="nav">
+        <a href="/victorfrommd">Home</a>
         <a href="/victorfrommd/blog">Blog</a>
         <a href="/victorfrommd/about">About</a>
       </div>
@@ -18,6 +19,10 @@
         hear that. You can show your appreciation by planting one more tree on
         my website.
       </div>
+      <h2>Articles</h2>
+      <ul>
+        <li><a href="/victorfrommd/posts/climate-change">Climate Change</a></li>
+      </ul>
     </div>
   </body>
 </html>
