Updated the message on the index page

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <div class="content">
       <div>
         A page for my thoughts. If you learned something new, I'm very glad to
-        hear that. You can show your appreciation by planting one more tree on
-        my website.
+        hear that.
       </div>
       <h2>Articles</h2>
       <ul>
