--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
     </div>
     <div class="content">
       <ul>
-        <li><a href="/victorfrommd/posts/climate-change">Climate Change</a></li>
+        <li><a href="/victorfrommd/posts/climate-change">Climate Change (July 2022)</a></li>
       </ul>
     </div>
   </body>
