--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <h2>Articles</h2>
       <ul>
-        <li><a href="/victorfrommd/posts/climate-change">Climate Change</a></li>
+        <li><a href="/victorfrommd/posts/climate-change">Climate Change (July 2022)</a></li>
       </ul>
     </div>
   </body>
