--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,8 @@
     <div class="content">
       <ul>
         <li><a href="/victorfrommd/posts/climate-change">Climate Change (July 2022)</a></li>
+        <li><a href="/victorfrommd/posts/sunset-park">Sunset Park by Paul Auster (June 2023)</a></li>
+        <li><a href="/victorfrommd/posts/toefl">TOEFL - just a test or proof of English knowledge? (June 2023)</a></li>
       </ul>
     </div>
   </body>
