Updated about page

--- a/about.html
+++ b/about.html
@@ -11,12 +11,15 @@
         <a href="/victorfrommd/blog">Blog</a>
         <a href="/victorfrommd/about">About</a>
       </div>
+    </div>
+    <div class="title">
       <h1>About</h1>
     </div>
     <div class="content">
       <div>
-        Hi! My name is Victor. I work as Software Engineer at Doctolib. I'm interested in Civil Engineering,
-        Religions, Music, Sports and many other topics. Follow me on this
+        Hi! My name is Victor. I grew up in Moldova, but now I'm living in Berlin. I'm in my late twenties and I work as Software Engineer at a healthcare company called Doctolib. 
+        I'm interested in Technology, Civil Engineering,
+        Religion, Music, practicing Sports and many other topics. Follow me on this
         non-sence journey of thoughts.
       </div>
     </div>
