--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,8 @@
         <a href="/victorfrommd/blog">Blog</a>
         <a href="/victorfrommd/about">About</a>
       </div>
+    </div>
+    <div class="title">
       <h1>Articles</h1>
     </div>
     <div class="content">
