Updated about section. Fixed some grammar mistakes

--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
       <div>
         Hi! My name is Victor. I grew up in Moldova, but now I'm living in Berlin. I'm in my late twenties and I work as Software Engineer at a healthcare company called Doctolib. 
         I'm interested in Technology, Civil Engineering,
-        Religion, Music, practicing Sports and many other topics. Follow me on this
-        non-sence journey of thoughts.
+        Religion, Music, practicing Sports and many other topics. Follow me on my
+        train of thoughts.
       </div>
     </div>
   </body>
