--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
         <li><a href="/victorfrommd/posts/climate-change">Climate Change (July 2022)</a></li>
       </ul>
     </div>
+    <footer class="footer">
+      <p>Author: Victor Luca</p>
+      <p><b>100% non-generated and authentic content</b></p>
+      <p>Last update: 19.04.2025</p>
+    </footer>
   </body>
 </html>
